📖fill english + system analysis

--- a/src/pages/english/theory.mdx
+++ b/src/pages/english/theory.mdx
@@ -5,4 +5,71 @@ icon: passport
 subheader: кафедра иностранных языков
 ---
 
-💀
+> На экзамене будут заданы вопросы по темам третьего и четвертого семестров. Первые 8 тем будут взяты
+[из 3 семестра](https://k0ndrateff.github.io/mirea-exams/archive/english/theory),
+остальные 8 из текущего.
+
+#### 9. The Internet.
+
+**Термины:**
+
+1. WWW *(World-Wide Web)* — всемирная паутина;
+2. Copper twisted-pair cable — медный кабель типа «витая пара»;
+3. Fiber-optic cable — оптоволоконный кабель;
+4. Сoaxial cable — коаксиальный кабель;
+5. Digital Subscriber Line *(DSL)* — цифровая абонентская линия;
+6. Asymmetric Digital Subscriber Line *(ADSL)* — асимметричная цифровая абонентская линия;
+7. Symmetric Digital Subscriber Line *(SDSL)* — симметричная цифровая абонентская линия;
+8. Very High Bitrate DSL *(VDSL)* — ЦАЛ с высокой скоростью передачи данных;
+9. Dedicated line — выделенная линия;
+10. Data transmission — передача данных;
+11. Сopper cable — медный провод;
+12. To click a suspicious link — переходить по подозрительной ссылке;
+13. Dial-up connection — коммутируемое соединение;
+14. File Transport Protocol *(FTP)* — протокол передачи файлов;
+15. Broadband — широкополосный;
+16. Bandwidth — ширина полосы пропускания (пропускная способность);
+17. Internet Service Provider *(ISP)* — интернет-провайдер;
+18. To deny access — отказать в доступе;
+19. Digital signal — цифровой сигнал;
+20. Download speed — скорость скачивания;
+21. Upload speed — скорость отправки;
+22. Firewall — брэндмауэр;
+23. Satellite Internet access — спутниковый интернет;
+24. Satellite connection — спутниковая связь;
+25. Cellular connection — сотовая связь;
+26. To transmit data — передавать данные;
+27. Network backbone — сетевая магистраль;
+28. High-speed Internet connection — высокоскоростное интернет-соединение;
+29. Request / query — запрос;
+30. Domain Name System *(DNS)* — система доменных имён;
+31. Internet access — доступ к интернету;
+32. Hyper Text Transfer Protocol *(HTTP)* — протокол передачи гипертекста;
+
+**Текст по теме:**
+
+##### How to get access to the Internet
+
+###### DSL
+Digital Subscriber Line (DSL) is a high-speed Internet connection, which utilizes the standard telephone lines, but allows digital signals to be carried rather than analogue. It allows the full bandwidth of the copper twisted-pair telephone cabling to be utilized. The DSL signal is pulled out from the phone line as it enters the premises and is wired separately to a DSL modem. DSL service can be delivered simultaneously with wired telephone service through the same telephone line since DSL uses higher frequency bands for data transmission.
+
+The most commonly installed DSL technology for Internet access is ADSL (Asymmetric Digital Subscriber Line). It is asymmetric because the download speed is faster than upload speed. DSL-based services are a low-cost option when compared to other solutions offering similar bandwidth, so they can be made available to customers at extremely competitive prices.
+
+Although DSL makes use of telephone cabling, it should not be confused with the dial-up connection of yesteryear. A dial-up connection to the Internet was set up by dialing a phone number, hence the name. Since the same frequency is used to carry voice and data signals over the copper telephone wire, only one service could be provided at a time and it was impossible to use the phone to make calls and browse the Internet at the same time.
+
+###### Cable Internet
+Cable Internet is a form of broadband Internet access that uses the infrastructure of cable TV networks to provide Internet services. It is integrated into the cable television infrastructure analogously to DSL, which uses the existing telephone network. Since TV itself takes up only a small portion of the cable’s bandwidth, it leaves room for Internet access to be provided through the same network.
+
+First, your Internet Service Provider sends a data signal through the coaxial cable into your home — specifically, to a cable modem. The cable modem then connects to your computer and other devices via an Ethernet cable or through Wi-Fi network using a Wi-Fi router.
+
+A cable connection is highly reliable and is not subject to outages due to storms, like satellite Internet. However, since residential cable Internet access is provided through shared bandwidth, which everyone in the neighborhood uses, the speed can be slower during peak usage hours when a lot of Internet users are online. This does not happen with a DSL network, which keeps a consistent Internet signal because each subscriber has their own dedicated line.
+
+###### Fiber-optic Internet
+Fiber-optic Internet uses fiber-optic cables instead of copper wires and it is incredibly fast. Those cables send data to and from a computer by harnessing the power of light and can carry data over long distances with low attenuation and distortion of the light signal. That light signal uses binary system to communicate with computers. The presence of light indicates a binary one and the absence of light indicates a binary zero. Fiber-optic cables transfer data faster than copper wiring, which means faster load times and higher-quality streaming.
+
+###### Wireless connection
+The three wireless technologies widely used today are Wi-Fi, cellular and satellite Internet. Wi-Fi uses radio waves to wirelessly connect devices and is commonly applied for local area networking. To get access to the Internet, a device (a tablet or a smartphone) has to be connected over Wi-Fi to a wireless router.
+
+Internet over Satellite usually allows a user to access the Net via a geostationary satellite that orbits the Earth. As signals must travel long distances from the Earth up to the satellite and back again, it may cause a delay between the request and the answer. However, modern technologies make it possible to minimize this latency. Thus, satellite Internet access can provide high-speed Internet where the conventional cable or DSL is either not available or not functioning well. To get access to the Internet, one needs a satellite dish for two-way (upload and download) data communications and a modem.
+
+A cellular network is a communication network distributed over land areas called "cells". Each cell has at least one fixed-location transceiver, but more commonly, there are three cell sites. These base stations (cell towers) provide a cell with the network coverage, which can be used for transmission of voice and data. A cell typically uses a different set of frequencies from the neighboring cells to avoid interference and provide guaranteed service quality within each cell.
