--- a/src/pages/system-analysis/theory.mdx
+++ b/src/pages/system-analysis/theory.mdx
@@ -193,3 +193,143 @@ gantt
 **Закон функционального развития (эволюции)** или *закон целостности* — способность системы претерпевать изменения внутри своей оболочки или окружающей среды, сохраняя самое себя.
 
 Первый закон теории систем раскрывает сущность системы как единого, целого образования и может отвечать на вопрос «что» такое система. В рамках этого закона описываются ряд закономерностей структурной организации свойств, связей и отношений между элементами, ограниченных единой формой существования. Жизнедеятельность такой системы обеспечена внутренней организацией системы управления общими ресурсами. Устойчивое или неустойчивое состояние системы зависит от скорости обмена между элементами системы потоками энергии, информации и вещества. В процессе такого обмена часто элемент может потерять свои свойства или приобрести новые, с условием всех изменений в рамках единой формы существования.
+
+#### 16. Дополнительные диаграммы UML.
+
+* Диаграмма пакетов;
+* Диаграмма объектов;
+* Диаграмма обзора взаимодействия;
+* Временная диаграмма;
+* Диаграмма композитной структуры;
+* Диаграмма коммуникации.
+
+#### 17. Система и среда. Виды и формы представления структур систем: линейная, сетевая, иерархическая, многоуровневая, матричная, смешанные и др.
+
+Система и среда — это взаимосвязанные понятия в теории систем. Система представляет собой совокупность взаимодействующих элементов, образующих определённую целостность, а среда — это окружение, в котором существует система.
+
+Виды и формы представления структур систем включают:
+
+1. Линейная структура — последовательное соединение элементов без разветвлений.
+2. Сетевая структура — система, состоящая из множества элементов, связанных между собой.
+3. Иерархическая структура — система, имеющая несколько уровней, где каждый уровень подчинён вышестоящему уровню.
+4. Многоуровневая структура — система, состоящая из нескольких иерархических уровней.
+5. Матричная структура — система, в которой элементы связаны между собой через матрицу отношений.
+6. Смешанные структуры — системы, сочетающие различные виды структур, например, иерархические и матричные.
+
+#### 18. Закон функциональной иерархии (целеобразования) систем.
+
+**Закон функциональной иерархии систем** — это закон, который сформулирован на основе принципа иерархии элементов в системе.
+
+Он объясняет целеобразование (образование цели) функционирования данной системы в окружающей среде, её функциональное назначение.
+
+Этот закон отвечает на вопрос «как» нужно управлять системой для её полезного использования, не доводя до разрушения.
+
+#### 19. Общая схема взаимосвязей моделей и представлений сложной системы в процессе объектно-ориентированного анализа.
+
+Общая схема взаимосвязей моделей и представлений сложной системы в процессе объектно-ориентированного анализа включает иерархическое построение моделей на разных уровнях абстрагирования или детализации. Исходная модель сложной системы имеет наиболее общее представление (метапредставление). Затем происходит последовательное дополнение моделей всё большим количеством деталей на логических и физических уровнях.
+
+#### 20. Методы исследования систем.
+
+Методы исследования систем включают:
+
+1. Теоретические методы: метод линейного программирования, метод точечной интерполяции, метод Монте-Карло, графические методы.
+2. Логико-интуитивные методы: экспертные методы исследования, тестирование, метод «дерева целей», SWOT-анализ, матричный метод.
+3. Эмпирические методы: наблюдение, изучение документации, сравнение, измерение, эксперимент.
+4. Комплексно-комбинированные методы: системный анализ и синтез, факторный и корреляционный анализ, функционально-стоимостной анализ, параметрический метод, квалиметрические методы, аудит.
+
+#### 21. Понятие среды.
+
+В контексте анализа систем среда — это совокупность объектов, которые влияют на систему и на которые система влияет в процессе своего функционирования. Среда всегда рассматривается относительно конкретной системы и включает все элементы, не входящие в эту систему, но с которыми она может взаимодействовать.
+
+#### 22. Диаграммы классов. Классы, атрибуты, операции.
+
+**Классом** называется именованное описание совокупности объектов с общими атрибутами, операциями, связями и семантикой. Графически класс изображается в виде прямоугольника.
+
+**Атрибутом класса** называется именованное свойство класса, описывающее множество значений, которые могут принимать экземпляры этого свойства. Класс может иметь любое число атрибутов.
+
+**Операцией класса** называется именованная услуга, которую можно запросить у любого объекта этого класса. Операция — это абстракция того, что можно делать с объектом. Класс может содержать любое число операций.
+
+```mermaid
+---
+title: Пример диаграммы классов
+---
+classDiagram
+	class BankAccount
+	BankAccount : +String owner
+	BankAccount : +Bigdecimal balance
+	BankAccount : +deposit(amount)
+	BankAccount : +withdrawal(amount)
+```
+
+#### 23. Процедуры системного анализа.
+
+Основные процедуры системного анализа:
+
+- изучение структуры системы, анализ её компонентов, выявление взаимосвязей между отдельными элементами;
+- сбор данных о функционировании системы, исследование информационных потоков, наблюдения и эксперименты над анализируемой системой;
+- построение моделей;
+- проверка адекватности моделей, анализ неопределённости и чувствительности;
+- исследование ресурсных возможностей;
+- определение целей системного анализа;
+- формирование критериев;
+- генерирование альтернатив;
+- реализация выбора и принятие решений;
+- внедрение результатов анализа;
+
+#### 24. Понятие элемента. Диаграммы классов.
+
+**Элементом** системы является часть системы с однозначно определёнными свойствами, выполняющие определённые функции и не подлежащие дальнейшему разбиению в рамках решаемой задачи (с точки зрения исследователя).
+
+#### 25. Отношения ассоциации и обобщения между классами.
+
+**Ассоциация** — отношение между классами, при котором один класс ссылается на один или несколько экземпляров другого класса по одному или нескольким идентификационным параметрам. Допускается, чтобы оба конца ассоциации относились к одному классу. В ассоциации могут связываться два класса, и тогда она называется бинарной.
+
+**Обобщение (наследование)** - это отношение типа общее-частное между элементами модели. С помощью обобщений *(generalization)* показывают связи наследования между двумя классами. Большинство объектно-ориентированных языков непосредственно поддерживают концепцию наследования. Она позволяет одному классу наследовать все атрибуты, операции и связи другого.
+
+#### 26. Анализ структуры системы.
+
+Анализ структуры системы — это процесс исследования системы управления, основанный на её декомпозиции и определении статических и динамических характеристик составляющих элементов во взаимосвязи с другими элементами системы и окружающей средой. Этот процесс включает задачи структурирования системы, определения функциональных особенностей, исследования информационных характеристик, определения количественных и качественных показателей, оценки эффективности и обобщения результатов анализа.
+
+#### 27. Понятие подсистемы.
+
+**Подсистема** — это промежуточный комплекс, который является более сложным, чем элементы системы, но менее сложным, чем сама система.
+
+#### 28. Основные составляющие структуры системы.
+
+1. **Элемент** — предел членения системы с точки зрения аспекта рассмотрения, решения конкретной задачи, поставленной цели.
+2. **Компонент, подсистема** — относительно независимая часть системы, обладающая свойствами системы и имеющая подцель.
+3. **Связь, отношение** — ограничение степени свободы элементов: элементы, вступая во взаимодействие (связь) друг с другом, утрачивают часть свойств или степеней свободы, которыми они потенциально обладали.
+4. **Структура** — наиболее существенные компоненты и связи, которые мало меняются при функционировании системы и обеспечивают существование системы и её основных свойств.
+
+Структура характеризует организованность системы, устойчивую во времени упорядоченность элементов и связей.
+
+#### 29. Системный анализ в моделировании.
+
+Системный анализ в моделировании — это методология, которая помогает анализировать сложные системы и процессы, учитывая их взаимосвязь и влияние друг на друга. Он состоит из следующих этапов:
+
+1. Определение целей и задач системы.
+2. Выявление всех элементов и подсистем, которые составляют систему.
+3. Установление связей между элементами и подсистемами.
+4. Анализ влияния каждой подсистемы на общую систему и наоборот.
+5. Оценка эффективности системы и поиск возможных улучшений.
+6. Разработка моделей и алгоритмов для управления и оптимизации системы.
+
+Системный анализ используется в различных областях, таких как управление проектами, бизнес-анализ, информационные технологии и научные исследования.
+
+#### 30. Диаграммы последовательности. Объекты и их изображение на диаграмме последовательности.
+
+**Диаграмма последовательности** — это UML-диаграмма, на которой для некоторого набора объектов на единой временной оси показан жизненный цикл объекта (создание, деятельность, уничтожение) и взаимодействие акторов (действующих лиц) информационной системы в рамках прецедента.
+
+**Основные элементы диаграммы последовательности:**
+
+1. Обозначения объектов (прямоугольники с названиями объектов).
+2. Вертикальные «линии жизни», отображающие течение времени.
+3. Прямоугольники, отражающие деятельность объекта или исполнение им определенной функции.
+4. Стрелки, показывающие обмен сигналами или сообщениями между объектами.
+
+```mermaid
+sequenceDiagram
+	Алиса->>Боб: Привет, Боб, как ты?
+	Боб-->>Алиса: Чудесно!
+	Алиса-)Боб: Увидимся!
+```
