📖fill databases and system software + python link

--- a/src/pages/databases/theory.mdx
+++ b/src/pages/databases/theory.mdx
@@ -160,3 +160,93 @@ subheader: кафедра промышленной информатики
 4. **Хранилища данных**. В них данные собираются и хранятся.
 
 #### 12. Сравнительный анализ SADT-моделей и диаграмм потоков данных.
+
+Сравнительный анализ SADT-моделей и диаграмм потоков данных показывает, что основное различие между ними заключается в средствах функционального моделирования. SADT-модели используются для моделирования организационных систем, в то время как диаграммы потоков данных применяются для моделирования процессов и данных.
+
+С точки зрения адекватности средств решаемым задачам, SADT-модели лучше подходят для описания стандартизированных бизнес-процессов, в то время как DFD (диаграммы потоков данных) более универсальны и могут использоваться для моделирования различных видов деятельности организаций.
+
+В плане согласованности с другими средствами структурного анализа, DFD и ERD (диаграммы отношений сущностей) хорошо интегрируются друг с другом, в то время как согласование SADT-модели с ERD может быть искусственным.
+
+Наконец, с точки зрения интеграции с последующими стадиями жизненного цикла программного обеспечения, DFD легко преобразуются в модели проектируемой системы, в то время как интеграция SADT-модели с последующими стадиями может быть затруднена.
+
+#### 13. Функциональные модели, используемые на стадии проектирования.
+
+На стадии проектирования баз данных используются следующие функциональные модели:
+
+1. Реляционная модель — основана на математической теории и предлагает способ хранения и поиска информации с учётом взаимосвязей между данными.
+2. Сетевая модель — использует записи и наборы данных, обеспечивая эффективный способ получения информации и организации данных для повышения производительности бизнеса.
+3. Иерархическая модель — имеет древовидную структуру и подходит для структурирования XML-документов.
+4. Графовая модель — основана на теории графов и использует узлы и рёбра для представления данных, обеспечивая лёгкое масштабирование и быстрый доступ к ассоциативным наборам данных.
+
+#### 14.Методология моделирования IDEF3: составные элементы, объекты ссылок, перекрестки.
+
+Методология моделирования IDEF3 состоит из следующих составных элементов:
+
+1. Блоки работы или действия (Units of Behavior, UOB) — описывают функции, процедуры или работы, выполняемые подразделениями или сотрудниками предприятия.
+2. Стрелки или связи — показывают взаимоотношения работ, бывают трёх видов: стрелки предшествования, отношения и потоки объектов.
+3. Перекрёстки (Junctions) — логические операторы «И», «ИЛИ», исключающее «ИЛИ» и их комбинации, позволяют описать ветвление или слияние процессов.
+4. Объекты ссылок (Referents) — используются для описания ссылок на другие диаграммы модели, циклических переходов в рамках одной модели и комментариев к функциям и перекрёсткам.
+
+Объекты ссылок связываются с единицами работ или перекрёстками линиями и изображаются в виде прямоугольников, похожих на прямоугольники работы.
+
+#### 15. Подходы к моделированию в базах данных.
+
+Подходы к моделированию в базах данных включают:
+
+1. Модель отношений сущностей (ER): абстрактная модель, которая организует описание данных, семантику данных и ограничения согласованности данных.
+2. UML (Единый язык моделирования): метод моделирования, который предоставляет графические обозначения для представления классов, объектов и их взаимодействий.
+
+#### 16. Анализ предметной области. Описание объектов и их свойств. Связи между элементами моделей данных. Описание сложных объектов.
+
+Анализ предметной области включает определение основных объектов и их свойств, а также связей между ними. Описание сложных объектов учитывает их составные части и отношения между ними.
+
+Объекты: материальные и информационные объекты, документы, услуги, организационные единицы, технические средства.
+
+Свойства: атрибуты, характеризующие каждый объект, например, название, стоимость, дата создания, автор.
+
+Связи: отношения между объектами, которые определяют их взаимодействие и зависимости друг от друга. Примеры связей: «имеет», «состоит из», «влияет на».
+
+Сложные объекты: объекты, состоящие из нескольких других объектов или групп объектов, связанных определёнными отношениями. Например, заказ может состоять из нескольких позиций товаров, а организационная единица может включать сотрудников и отделы.
+
+#### 17. Проблема целостности базы данных.
+
+Проблема целостности базы данных заключается в поддержании соответствия структуры и содержания базы данных предметной области. Это обеспечивает соответствие данных требованиям предметной области и исключает противоречия и ошибки в информации.
+
+Целостность данных делится на два основных типа:
+
+- **Целостность сущностей**: каждый кортеж (группа взаимосвязанных элементов данных) в отношении должен отличаться от других кортежей этого отношения, что гарантирует уникальность каждого объекта.
+- **Ссылочная целостность**: для каждого значения внешнего ключа в дочернем отношении должен находиться кортеж с таким же значением первичного ключа в родительском отношении, чтобы избежать неопределённых значений внешнего ключа.
+
+#### 18. Даталогическое проектирование. Нотация Питера Чена. Нотация IDEF 1х.
+
+**Нотация Питера Чена** — это графическая нотация для визуализации ER-моделей.
+
+**Основные особенности нотации:**
+
+1. Множества сущностей изображаются в виде прямоугольников.
+2. Множества отношений изображаются в виде ромбов.
+3. Если сущность участвует в отношении, они связаны линией.
+4. Если отношение не является обязательным, то линия пунктирная.
+5. Атрибуты изображаются в виде овалов и связываются линией с одним отношением или с одной сущностью.
+
+#### 19. Проектирование реляционных баз данных на основе принципов нормализации. Правила технической нормализации.
+
+Принципы нормализации данных позволяют организовать данные в базе таким образом, чтобы упростить работу с ними, обеспечить быстрый поиск и возможность изменения структуры для разных задач. Нормализация состоит из нескольких этапов, включая первую, вторую и третью нормальные формы.
+
+Правила технической нормализации включают:
+
+1. Первая нормальная форма (1NF): данные должны быть атомарными, то есть каждый элемент данных должен быть неделимым и неизменным.
+2. Вторая нормальная форма (2NF): все неключевые атрибуты должны зависеть от первичного ключа, то есть не должно быть транзитивных зависимостей.
+3. Третья нормальная форма (3NF): все атрибуты должны зависеть только от первичного ключа, то есть не должно быть многозначных зависимостей.
+
+#### 20. Алгоритм процесса нормализации схем отношений.
+
+Алгоритм процесса нормализации схем отношений включает следующие шаги:
+
+1. Создание таблиц и определение первичных ключей.
+2. Устранение повторяющихся групп данных в отдельных таблицах.
+3. Создание отдельных таблиц для наборов значений, относящихся к нескольким записям.
+4. Связывание таблиц с помощью внешних ключей.
+5. Исключение полей, которые не зависят от ключа.
+6. Размещение данных, которые могут относиться более чем к одной записи, в отдельной таблице.
+
