--- a/src/pages/python/theory.mdx
+++ b/src/pages/python/theory.mdx
@@ -5,7 +5,7 @@ icon: mac
 subheader: кафедра корпоративных ИС
 ---
 
-> 🤬Вопросы к зачету будут доступны с 25 мая. Для допуска к зачету необходимо
-[решить 12 задач](https://github.com/k0ndrateff/mirea-python),
+> 🤬 Вопросы к зачету будут доступны с 25 мая. Для допуска к зачету необходимо
+[решить 12 задач](https://github.com/k0ndrateff/mirea_python)
 из ЦАП.
 
