--- a/src/pages/system-software/theory.mdx
+++ b/src/pages/system-software/theory.mdx
@@ -2,7 +2,7 @@
 layout: ../../layouts/TheoryLayout.astro
 title: Системное программное обеспечение
 icon: console
-subheader: кКафедра математического обеспечения и стандартизации ИТ
+subheader: Кафедра математического обеспечения и стандартизации ИТ
 ---
 
 #### 1. Загрузчик операционной системы. Определение и задачи.
