📖 fill system analysis 31-38

--- a/src/pages/system-analysis/theory.mdx
+++ b/src/pages/system-analysis/theory.mdx
@@ -333,3 +333,127 @@ sequenceDiagram
 	Боб-->>Алиса: Чудесно!
 	Алиса-)Боб: Увидимся!
 ```
+
+#### 31. Формы представления структур.
+
+В анализе систем используются различные формы представления структур, такие как:
+
+1. **Сетевые структуры** — показывают порядок действий или этапов процесса, например, сетевой график производства или проектирования.
+2. **Иерархические структуры** — отражают декомпозицию системы в пространстве, где каждый уровень имеет свои компоненты и связи. Могут быть древовидными (с “сильными” связями) или иметь “слабые” связи между элементами разных уровней.
+3. **Матричные структуры** — соответствуют иерархическим структурам, но отношения между элементами представлены в виде матрицы.
+4. **Многоуровневые иерархические структуры** — включают стратифицированные, слоистые, эшелонированные и смешанные структуры, которые позволяют анализировать систему на разных уровнях абстракции.
+5. **Смешанные иерархические структуры** — объединяют вертикальные и горизонтальные связи для более точного отображения взаимодействия элементов системы
+
+Эти формы помогают лучше понять структуру системы, выявить её ключевые элементы и связи между ними, что важно для анализа и оптимизации работы системы.
+
+#### 32. Анализ и синтез систем.
+
+Анализ и синтез систем представляют собой два ключевых подхода в исследовании и проектировании сложных систем.
+
+**Анализ систем** — это процесс исследования системы, основанный на её декомпозиции с последующим определением статических и динамических характеристик составляющих элементов, рассматриваемых во взаимосвязи с другими элементами системы и окружающей средой. Цели анализа системы включают детальное изучение системы для более эффективного использования и принятия решения по её дальнейшему совершенствованию или замене, а также исследование альтернативных вариантов вновь создаваемой системы с целью выбора наилучшего варианта.
+
+**Синтез систем** — это процесс создания новой системы путём определения её рациональных или оптимальных свойств и соответствующих показателей. Цели синтеза системы включают создание новой системы управления на основе новых достижений науки и техники, а также совершенствование существующей системы управления на основе выявленных недостатков и появления новых задач и требований.
+
+Оба подхода тесно связаны и дополняют друг друга. Анализ позволяет глубже понять существующую систему, выявить её слабые места и возможности для улучшения, в то время как синтез предоставляет инструменты для разработки новых систем, отвечающих современным требованиям и условиям.
+
+#### 33. Диаграммы последовательности. Сообщения на диаграмме.
+
+Диаграммы последовательности в UML используются для визуализации временных последовательностей взаимодействий между объектами в системе. Они показывают, как объекты обмениваются сообщениями в течение определенного сценария использования. Сообщения на диаграмме последовательности изображаются в виде стрелок, направленных от одного объекта к другому.
+
+Существует несколько типов сообщений, которые могут быть использованы на диаграммах последовательности:
+1. **Вызов процедуры**: Это наиболее распространенный тип сообщения, который используется для вызова методов или процедур объектов. Начало стрелки вызова процедуры указывает на объект, который инициирует вызов, а конец стрелки указывает на объект, который должен выполнить процедуру.
+2. **Асинхронное сообщение**: Используется для обозначения сообщений, которые передаются без ожидания ответа. Асинхронные сообщения часто используются для уведомления объектов о событиях или изменениях состояния.
+3. **Возврат вызова**: Используется для обозначения завершения выполнения процедуры и возврата управления обратно к объекту, который инициировал вызов.
+
+Каждое сообщение на диаграмме последовательности может быть ассоциировано с определенной операцией, которую должен выполнить получатель сообщения. Операция может иметь аргументы или параметры, которые влияют на результат выполнения операции.
+
+```mermaid
+sequenceDiagram
+	Алиса->>Боб: Вызов процедуры
+	Боб->>Алиса: Возврат вызова
+	Алиса--)Боб: Асинхронное сообщение
+```
+
+#### 34. Ветвление и циклы потока управления.
+
+В UML для моделирования ветвлений и циклов потока управления используются диаграммы деятельности (Activity Diagrams).
+
+###### Ветвление
+Ветвление в UML представлено ромбом, который называется “Decision”. Из него выходит две или более стрелки, каждая из которых ведет к следующему действию или состоянию. Условие ветвления указывается рядом с каждой стрелкой. Если условие истинно, то выполняется действие или состояние, связанное с этой стрелкой.
+
+###### Циклы
+Для моделирования циклов в UML используются специальные символы. Один из способов моделирования цикла - использование символа “Loop”, который представляет собой ромб с петлей внутри. Этот символ обозначает начало и конец цикла. Внутри цикла размещаются действия, которые должны повторяться.Другой способ моделирования цикла - использование символа “Fork”, который разделяет поток управления на несколько параллельных ветвей, и символа “Join”, который объединяет эти ветви обратно в один поток. Это позволяет моделировать параллельные циклы или циклы с несколькими параллельными задачами.
+
+#### 35. Сбор данных о функционировании системы.
+
+Сбор данных о функционировании системы включает в себя мониторинг и регистрацию различных аспектов работы системы с целью последующего анализа и оптимизации.
+
+Этот процесс может включать в себя использование различных инструментов и технологий, таких как:
+
+1. **Системы мониторинга**: Эти системы собирают данные о производительности, доступности и других метриках системы в реальном времени. Они могут использовать различные протоколы и технологии для сбора данных, такие как SNMP, WMI, JMX и другие.
+2. **Логирование**: Логирование позволяет записывать события, происходящие в системе, в файлы журналов. Это может быть полезно для отслеживания ошибок, аудита действий пользователей и анализа поведения системы.
+3. **Метрики**: Метрики предоставляют количественные данные о работе системы. Они могут включать в себя показатели производительности, использования ресурсов, доступности и другие важные аспекты.
+4. **Мониторинг сетевых соединений**: Мониторинг сетевых соединений позволяет отслеживать трафик, проходящий через сеть, и выявлять потенциальные проблемы с производительностью или безопасностью.
+5. **Мониторинг баз данных**: Мониторинг баз данных позволяет собирать данные о производительности, использовании ресурсов и других аспектах работы баз данных.
+6. **Мониторинг серверов приложений**: Мониторинг серверов приложений позволяет отслеживать работу приложений, включая использование ресурсов, доступность и производительность.
+7. **Мониторинг инфраструктуры**: Мониторинг инфраструктуры включает в себя сбор данных о работе серверов, сетей, хранилищ данных и других компонентов ИТ-инфраструктуры.
+8. **Мониторинг безопасности**: Мониторинг безопасности включает в себя сбор данных о попытках несанкционированного доступа, аномальной активности и других угрозах безопасности.
+
+Собранные данные могут быть использованы для анализа работы системы, выявления проблем и принятия мер по их устранению. Это помогает обеспечить стабильность, надежность и эффективность работы системы.
+
+#### 36. Диаграммы вариантов использования. Актеры, прецеденты и отношения.
+
+Диаграммы вариантов использования (use case diagrams) являются ключевым инструментом в разработке программного обеспечения и системном анализе. Они помогают визуализировать, как пользователи взаимодействуют с системой, и какие функции система предоставляет пользователям.
+
+###### Основные компоненты диаграммы вариантов использования:
+
+1. **Актер (Actor)** - это внешняя сущность, которая взаимодействует с системой. Актером может быть человек, организация, другая система или даже программный компонент. Актеры инициируют взаимодействие с системой, используя её функции.
+2. **Прецедент (Use Case)** - это описание последовательности действий, которые выполняются системой в ответ на запрос актера. Прецеденты определяют, что система должна делать, но не как она это делает.
+3. **Отношения** - это связи между актерами и прецедентами, которые показывают, как актеры взаимодействуют с системой. Существует три основных типа отношений:
+
+- **Включение (Include)** - один прецедент включает в себя функциональность другого прецедента. Это означает, что первый прецедент может использовать функциональность второго, но не обязательно должен полностью его реализовывать.
+- **Расширение (Extend)** - один прецедент расширяет функциональность другого прецедента. Это означает, что первый прецедент может добавить дополнительную функциональность к второму, но не является обязательным для его выполнения.
+- **Обобщение (Generalization)** - один актер обобщает другого актера. Это означает, что второй актер наследует все свойства и отношения первого актера.
+
+###### Пример диаграммы вариантов использования:
+
+Представим систему онлайн-магазина. В этой системе есть два актера: покупатель и администратор. Покупатель хочет купить товар, а администратор управляет товарами и заказами.
+
+Покупатель может выполнить следующие прецеденты:
+
+- Просмотр товаров
+- Добавление товара в корзину
+- Оформление заказа
+- Оплата заказа
+
+Администратор может выполнить следующие прецеденты:
+
+- Управление товарами
+- Обработка заказов
+- Управление пользователями
+
+Между покупателем и администратором существует отношение включения. Это означает, что покупатель может использовать функционал администратора для управления своим заказом, но не обязан это делать.
+
+Также между прецедентами “Оформление заказа” и “Оплата заказа” существует отношение расширения. Это означает, что после оформления заказа покупатель может выбрать способ оплаты, который расширяет основной процесс оформления заказа.
+
+Таким образом, диаграммы вариантов использования помогают разработчикам и аналитикам понять, какие функции должна предоставлять система, и как она будет использоваться пользователями.
+
+#### 37. Исследование информационных потоков.
+
+Исследование информационных потоков – это процесс анализа и оценки движения информации внутри организации или системы. Цель такого исследования заключается в оптимизации информационных процессов, повышении эффективности работы и улучшении качества принимаемых решений.
+
+Методы исследования информационных потоков включают:
+
+1. **Метод матричного моделирования процессов обработки данных** – сбор и анализ всей документации, циркулирующей в организации в течение года, с последующим построением матриц, отражающих взаимосвязи между документами и показателями.
+2. **Графоаналитический метод** – построение графической схемы, отображающей структуру информационного потока, с указанием руководителей и персонала, участвующих в сборе и обработке данных.
+3. **Модульный метод** – детальный анализ определенного информационного потока с использованием типовых карточек для каждого сообщения, что позволяет выявить дублирование, определить пропускную способность каналов и требуемые вычислительные мощности.
+4. **Метод последовательного анализа задач управления** – изучение работы отдельных сотрудников и разработка постановки частных задач управления для выявления “коротких” потоков информации в процессах оперативного управления.
+5. **Алгоритмический метод** – описание операций управления на специальном алгоритмическом языке с последующим применением программ автоматического анализа.
+6. **Метод описания потоков информации с помощью графов типа “дерево”** – выявление решающих показателей, выражающих командную информацию, которую орган управления передает в нижестоящие инстанции.
+7. **Метод анализа норм выработки решений** – поиск и систематизация всех действующих правовых норм, которые учитываются в выработке решений.
+
+Каждый из этих методов имеет свои преимущества и недостатки, и выбор конкретного метода зависит от целей исследования, специфики организации и доступных ресурсов.
+
+#### 38. Модели и моделирование.
+
+**Модель** – это упрощенное представление реального объекта, процесса или явления, которое сохраняет существенные свойства оригинала и используется для его изучения. Модели могут быть материальными (физическими) или информационными.
